==> apolecoco/STM32-Interactive-Art/base_code_stm32/base_code_stm32/HARDWARE/OLED/spi_oled.c <==
#include "spi_oled.h"
#include "oledfont.h"
#include "stdio.h"
#include "stdlib.h"
#include "delay.h"

void SPI_OLED_Hardware_Init(void)
{
	SPI_InitTypeDef SPI_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;

	RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5 | GPIO_Pin_7;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	GPIO_SetBits(GPIOA, GPIO_Pin_5 | GPIO_Pin_7); // PA5/6/7上拉

	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_8;
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
	SPI_InitStructure.SPI_CRCPolynomial = 7;
	SPI_Init(SPI1, &SPI_InitStructure);
	// Enable SPIx
	SPI_Cmd(SPI1, ENABLE);
}

uint8_t SPI1_WriteByte(uint8_t TxData)
{
	uint8_t retry = 0;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET) //检查指定的SPI标志位设置与否:发送缓存空标志位
	{
		retry++;
		if (retry > 200)
			return 0;
	}
	SPI_I2S_SendData(SPI1, TxData); //通过外设SPIx发送一个数据
	retry = 0;

	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET) //检查指定的SPI标志位设置与否:接受缓存非空标志位
	{
		retry++;
		if (retry > 200)
			return 0;
	}
	return SPI_I2S_ReceiveData(SPI1); //返回通过SPIx最近接收的数据
}

void SPI_OLED_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	// PB0作为数据/指令信号引脚,PB1作为片选信号,PB2作为复位信号引脚
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE); //使能A端口时钟
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;  //推挽输出
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz; //速度50MHz
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	GPIO_SetBits(GPIOB, GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2); // PB0,PB1,PB2输出高

	SPI_OLED_Hardware_Init();

	SPI_OLED_RST_Set();
	delay_ms(10);
	SPI_OLED_RST_Clr();
	delay_ms(20);
	SPI_OLED_RST_Set();

	SPI_OLED_WR_Byte(0xAE, OLED_CMD); //--turn off oled panel
	SPI_OLED_WR_Byte(0x02, OLED_CMD); //---set low column address
	SPI_OLED_WR_Byte(0x10, OLED_CMD); //---set high column address
	SPI_OLED_WR_Byte(0x40, OLED_CMD); //--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	SPI_OLED_WR_Byte(0x81, OLED_CMD); //--set contrast control register
	SPI_OLED_WR_Byte(0xCF, OLED_CMD); // Set SEG Output Current Brightness
	SPI_OLED_WR_Byte(0xA1, OLED_CMD); //--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
	SPI_OLED_WR_Byte(0xC8, OLED_CMD); // Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
	SPI_OLED_WR_Byte(0xA6, OLED_CMD); //--set normal display
	SPI_OLED_WR_Byte(0xA8, OLED_CMD); //--set multiplex ratio(1 to 64)
	SPI_OLED_WR_Byte(0x3f, OLED_CMD); //--1/64 duty
	SPI_OLED_WR_Byte(0xD3, OLED_CMD); //-set display offset	Shift Mapping RAM Counter (0x00~0x3F)
	SPI_OLED_WR_Byte(0x00, OLED_CMD); //-not offset
	SPI_OLED_WR_Byte(0xd5, OLED_CMD); //--set display clock divide ratio/oscillator frequency
	SPI_OLED_WR_Byte(0x80, OLED_CMD); //--set divide ratio, Set Clock as 100 Frames/Sec
	SPI_OLED_WR_Byte(0xD9, OLED_CMD); //--set pre-charge period
	SPI_OLED_WR_Byte(0xF1, OLED_CMD); // Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	SPI_OLED_WR_Byte(0xDA, OLED_CMD); //--set com pins hardware configuration
	SPI_OLED_WR_Byte(0x12, OLED_CMD);
	SPI_OLED_WR_Byte(0xDB, OLED_CMD); //--set vcomh
	SPI_OLED_WR_Byte(0x40, OLED_CMD); // Set VCOM Deselect Level
	SPI_OLED_WR_Byte(0x20, OLED_CMD); //-Set Page Addressing Mode (0x00/0x01/0x02)
	SPI_OLED_WR_Byte(0x02, OLED_CMD); //
	SPI_OLED_WR_Byte(0x8D, OLED_CMD); //--set Charge Pump enable/disable
	SPI_OLED_WR_Byte(0x14, OLED_CMD); //--set(0x10) disable
	SPI_OLED_WR_Byte(0xA4, OLED_CMD); // Disable Entire Display On (0xa4/0xa5)
	SPI_OLED_WR_Byte(0xA6, OLED_CMD); // Disable Inverse Display On (0xa6/a7)
	SPI_OLED_WR_Byte(0xAF, OLED_CMD); //--turn on oled panel

	SPI_OLED_WR_Byte(0xAF, OLED_CMD); /*display ON*/
	SPI_OLED_Clear();
	SPI_OLED_Set_Pos(0, 0);
}
